fixed header color dark mode

--- a/src/components/Header/Navbar.css
+++ b/src/components/Header/Navbar.css
@@ -6,7 +6,7 @@
     --s: 0.1em;   /* the thickness of the line */
     --c: #3dc3f0; /* the color */
     
-    color: #fff;
+    /* color: #fff; */
     padding-bottom: var(--s);
     background: 
       linear-gradient(90deg,var(--c) 50%,#000 0) calc(100% - var(--_p,0%))/200% 100%,
